# FocusConnpass

./: .gitignore  CLAUDE.md  README.md  elevator-pitch.md  profile.yaml  pyproject.toml
.claude/: settings.json
.claude/rules/: architecture.md  coding-style.md  commit.md
07/6e4997f827/: metadata.json
07/6e4997f827/0/: content_hash.txt  full.jsonl  metadata.json
1b/be093c8ffa/: metadata.json
1b/be093c8ffa/0/: metadata.json
3c/cd4f50529a/: metadata.json
3c/cd4f50529a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
44/8ed908e422/: metadata.json
44/8ed908e422/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4d/fd7a017136/: metadata.json
4d/fd7a017136/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
51/b87320626b/: metadata.json
51/b87320626b/0/: metadata.json
63/63fae30f50/: metadata.json
63/63fae30f50/0/: content_hash.txt  metadata.json
64/b7bc51ea47/: metadata.json
7d/de749c59a9/: metadata.json
82/7bf2460c7a/: metadata.json
86/08825abde9/: metadata.json
aa/18f1098dad/: metadata.json
b4/af84e8e200/: metadata.json
bd/f7f38c15ad/: metadata.json
c1/c5839d3a7e/: metadata.json
c9/f0d49ef86c/: metadata.json
d6/0b6f1f8fe4/: metadata.json
db/8c6d9fb755/: metadata.json
f3/347648b060/: metadata.json
focusconnpass/: __main__.py  config.py  server.py
focusconnpass/tools/: fetch_events_tool.py  get_event_detail_tool.py  get_user_profile_tool.py  open_event_page_tool.py
focusconnpass/usecase/: fetch_events.py  get_event_detail.py
tests/usecase/: test_fetch_events.py  test_get_event_detail.py
(+53 files in other folders)
